@@ -1,3 +1,7 @@
+09/23/2009
+- improvements and bugfix on {include} tag handling
+NOTICE: existing compiled template and cache files must be deleted
+
 09/19/2009
 - replace internal "eval()" calls by "include" during rendering process
 - speed improvment for templates which have included subtemplates
